@@ -1,3 +1,10 @@
+2001-04-22  Elliot Glaysher <nuriko.chan@home.com>
+
+	* Netcomics/Factory.pm: Fixed bug that caused "Sort subroutine
+	didn't return single value at /usr/lib/perl5/Netcomics/Factory.pm
+	line 865." on netcomics -l. (Ben, I may have broken other things
+	while fixing this, please advise.)
+	
 2001-04-22  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
 	* Modularized the rest of netcomics.
